# dotfiles

./: .chezmoi.yml.tmpl  .chezmoiignore  .gitignore  .install-password-manager.sh  .zshrc  README.md  Taskfile.yaml  Taskfile.yml  Taskfile.yml.tmpl  bootstrap.sh  bootstrap_refactor.sh  dot_ansible.cfg.tmpl  dot_ansiweatherrc  dot_env.tmpl  dot_gitconfig.tmpl  dot_gitignore.tmpl  dot_profile.tmpl  dot_rsync-exclude  dot_rsync-filter  dot_sops.yaml  dot_vimrc  dot_vimrc.tmpl  dot_zlogin  dot_zprofile  dot_zprofile.tmpl  dot_zshenv  dot_zshenv.tmpl  dot_zshrc  dot_zshrc.tmpl  encrypted_dot_autoenv.zsh.age  encrypted_dot_autoenv.zsh.asc  encrypted_private_dot_gcalcli_oauth.age  encrypted_private_dot_gcalcli_oauth.asc  encrypted_private_dot_gcalclirc.age  encrypted_private_dot_gcalclirc.asc  encrypted_private_dot_npmrc.age  encrypted_private_readonly_dot_googledrive.conf.age  executable_bootstrap.sh  install.sh  install.sh.tmpl  (+10 more)
.chezmoidata/: .gitkeep  bootstrap.toml  data_home_vars.toml  env.toml  inventory.toml  packages.toml  template_vars.toml
.chezmoiexternals/: ansible.toml  ansible_repos.toml  automation_repos.toml  fonts.toml  repos.toml  script_bin.toml  script_libs.toml  vim.toml
.chezmoiscripts/: run_once_00_validate_env.zsh  run_once_00_xdg.sh  run_once_00_xdg.zsh  run_once_01_powershell.bat.tmpl  run_once_after_00_setup.sh.tmpl  run_once_after_00_setup.zsh.tmpl  run_once_after_10_setup.py  run_once_after_99_cleanup.zsh.tmpl  run_once_after_99_setup.sh.tmpl  run_once_before_00_init.sh.tmpl  run_once_before_00_setup.sh.tmpl  run_once_before_20-install-apt-packages.sh.tmpl  run_onchange_export.sh  (+2 more)
(+205 files in other folders)
