[tool.poetry]
name = "chezmoi"
version = "0.1.2"
description = "Personal dotfiles management"
authors = ["Jeremy Hettenhouser <jhettenh@gmail.com>"]
readme = "README.md"
packages = [
  { include = "*", from = ".chezmoiscripts" }
]

[tool.poetry.dependencies]
python = ">3.12,<4.0"
pykeepass = "^4.0.7.post1"
boltdb = "^0.0.2"
python-dotenv = "^1.0.1"
plumbum = "^1.8.3"
xdg-base-dirs = "^6.0.1"
setuptools = "^70.0.0"
trapper-keeper = {git = "https://github.com/borland502/trapper_keeper", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
