[tool.poetry]
authors = ["Jeremy Hettenhouser <jhettenh@gmail.com>"]
description = ""
name = "chezmoi"
packages = [{ from = ".chezmoiscripts", include = "*.py" }]
readme = "README.md"
version = "0.1.1"

[tool.poetry.dependencies]
dasbootstrap = { path = "/home/ansible/.local/share/automation/dasbootstrap/dist/dasbootstrap-0.2.4.tar.gz", develop = true }
python = "^3.12"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
